--- a/cms/composer.json
+++ b/cms/composer.json
@@ -39,6 +39,10 @@
         "wbrowar/guide": "^2.2",
         "wrav/oembed": "^1.3.9"
     },
+    "require-dev": {
+        "nystudio107/craft-autocomplete": "^1.0.0",
+        "yiisoft/yii2-shell": "^2.0.3"
+    },
     "autoload": {
         "psr-4": {
             "modules\\demos\\": "modules/demos/src/"
