feat: Significantly increased startup times via a `npm_install.sh` script that only runs `npm install` at container startup time if `package-lock.json` or `node_modules/` is missing

--- a/docker-config/node-dev-vite/Dockerfile
+++ b/docker-config/node-dev-vite/Dockerfile
@@ -1,6 +1,9 @@
 FROM nystudio107/node-dev-base:16-alpine
 
-WORKDIR /var/www/project/buildchain/
+WORKDIR /var/www/project/
+
+COPY ./npm_install.sh .
+RUN chmod a+x npm_install.sh
 
 # Install packages
 RUN set -eux; \
@@ -20,6 +23,8 @@ RUN set -eux; \
 # This automatic running adds to the startup overhead of `docker-compose up`
 # but saves far more time in not having to deal with out of sync versions
 # when working with teams or multiple environments
-CMD npm install \
+CMD ./npm_install.sh \
+    && \
+    cd /var/www/project/buildchain/ \
     && \
     npm run dev
