--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,7 @@ services:
     env_file:
       *env
     environment:
-      POSTGRES_DB: project
+      POSTGRES_DATABASES: "project"
       POSTGRES_USER: project
       POSTGRES_PASSWORD: project
     expose:
